btn align -D+routing init --Issue

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,9 +1,9 @@
 .button {
     width: 110px;
     height: 40px;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-start; */
     gap: 10px;
     background-color: rgb(0, 0, 0);
     border-radius: 30px;
@@ -44,7 +44,7 @@
   
   /* serach input */
   .card__form {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     gap: 10px;
   }
@@ -54,11 +54,13 @@
     outline: 0;
     background: rgb(255, 255, 255);
     box-shadow: transparent 0px 0px 0px 1px inset;
-    padding: 0.6em;
+    padding: 0.9em;
     border-radius: 14px;
     border: 1px solid #333;
     color: black;
     width: fit-content;
+    margin-right: 10px;
+    margin-bottom: 10px;
   }  
 
   .card__form button {
